# easy_profiler

./: CMakeLists.txt  package.xml
easy_profiler_core/: CMakeLists.txt
easy_profiler_core/include/easy_profiler/: profiler.h  profiler_aux.h  reader.h  serialized_block.h
easy_profiler_core/src/: current_time.h  easy_socket.cpp  event_trace_win.cpp  profile_manager.cpp  profile_manager.h  reader.cpp
profiler_gui/: SignalBlocker.h  blocks_graphics_view.cpp  blocks_graphics_view.h  blocks_tree_widget.cpp  blocks_tree_widget.h  common_types.h  descriptors_tree_widget.cpp  descriptors_tree_widget.h  easy_frame_rate_viewer.cpp  easy_frame_rate_viewer.h  easy_graphics_item.cpp  easy_graphics_item.h  globals_qobjects.h  main.cpp  main_window.cpp  main_window.h  tree_widget_item.h  tree_widget_loader.cpp  tree_widget_loader.h
reader/: main.cpp
sample/: express_sample.cpp  main.cpp
