<?xml version="1.0"?>
<package>
  <name>easy_profiler</name>
  <version>1.3.0</version>
  <description>The easy_profiler package</description>

  <maintainer email="davide.faconti@eurecat.org">Davide Faconti</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-svg-dev</build_depend>

  <run_depend>qtbase5-dev</run_depend>
  <run_depend>libqt5-svg-dev</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
